# django-plugin-database-url

./: pyproject.toml
django_plugin_database_url/: __init__.py
tests/: test_django_plugin_database_url.py
